[gd_scene load_steps=2 format=2]

[ext_resource path="res://System/NetworkSystem/NetworkSetup.gd" type="Script" id=1]

[node name="NetworkSetup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MultiplayerConfigure" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="MultiplayerConfigure"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MultiplayerConfigure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -42.0
margin_right = 75.0
margin_bottom = 42.0
custom_constants/separation = 10

[node name="CreateServer" type="Button" parent="MultiplayerConfigure/VBoxContainer"]
margin_right = 150.0
margin_bottom = 20.0
text = "Create Server"

[node name="JoinServer" type="Button" parent="MultiplayerConfigure/VBoxContainer"]
margin_top = 30.0
margin_right = 150.0
margin_bottom = 50.0
text = "Join Server"

[node name="ServerIpAddress" type="LineEdit" parent="MultiplayerConfigure/VBoxContainer"]
margin_top = 60.0
margin_right = 150.0
margin_bottom = 84.0
align = 1
placeholder_text = "Enter IP Address"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DeviceIpAddress" type="Label" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
align = 1
valign = 1

[connection signal="pressed" from="MultiplayerConfigure/VBoxContainer/CreateServer" to="." method="_on_CreateServer_pressed"]
[connection signal="pressed" from="MultiplayerConfigure/VBoxContainer/JoinServer" to="." method="_on_JoinServer_pressed"]
